# eris

./: .gitignore  404.html  CONTRIBUTING.md  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/workflows/: docs.yml
docs/: conf.py  index.md
docs/api/: core.rst  db.rst  index.rst  scanner.rst  typing.rst
docs/guide/: Databases.rst  FAQs.rst  Installation.rst  Interpreting-the-results.rst  Method.rst  Outputs.rst  Usage.rst  index.rst
reference/eris/: index.html
reference/eris/alignment/: index.html
reference/eris/alphabet/: index.html
reference/eris/cli/: index.html
reference/eris/db/: index.html
reference/eris/graph/: index.html
reference/eris/io/: index.html
reference/eris/mapper/: index.html
reference/eris/pan/: index.html
reference/eris/scan/: index.html
reference/eris/seq/: index.html
reference/eris/utils/: index.html
search/: search_index.json
src/eris/: __init__.py  alignment.py  alphabet.py  cli.py  db.py  external.py  graph.py  io.py  mapper.py  minimap2.py  pan.py  scan.py  scanner.py  seq.py  utils.py
src/eris/data/: PF01548.hmm  PF01609.hmm  PF01797.hmm  RF03014.cm  RF03015.cm
