[project]
authors = [{name = "Tom Stanton", email = "tomdstanton@gmail.com"}]
name = "eris"
description = "Uncovering IS-mediated discord in bacterial genomes"
requires-python = ">= 3.9"
dynamic = ["urls", "version"]

[project.scripts]
eris = "eris.cli:main"

[project.optional-dependencies]
test = ["pytest"]
docs = [
    "mkdocs",
    "mkdocs-material",
    "mkdocs-api-autonav>=0.3.0,<0.4",
    "pyrodigal>=2.1.0"
]
orf = ["pyrodigal>=2.1.0"]
dev = ["eris[test,docs,orf]"]

# This section is for hatch/pixi environments and should be kept
[dependency-groups]
test = ["pytest"]
docs = [
    "mkdocs",
    "mkdocs-material",
    "mkdocs-api-autonav>=0.3.0,<0.4"
#    "mkdocs-include-markdown-plugin"
]
orf = ["pyrodigal>=2.1.0"]
dev = [{include-group = "test"}, {include-group = "docs"}, {include-group = "orf"}]

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling", "hatch-vcs"]

[tool.hatch.version]
source = "vcs"

[tool.pixi.workspace]
channels = ["bioconda", "conda-forge"]
platforms = ["osx-arm64", "linux-64"]

[tool.pixi.pypi-dependencies]
eris = { path = ".", editable = true }

[tool.pixi.dependencies]
#pixi-pycharm = ">=0.0.8,<0.0.9"
#frag_gene_scan_rs = ">=1.1.0,<2"
minimap2 = ">=2.30,<3"

[tool.pixi.environments]
default = {features = [], solve-group = "default"}
test = {features = ["test"], solve-group = "default"}
docs = {features = ["docs"], solve-group = "default"}
dev = {features = ["dev"], solve-group = "default"}
